--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -3485,6 +3485,56 @@ input[type=checkbox] {
   border-width: 2px;
 }
 
+.bg-gray {
+  background-color: #f8f8f8;
+}
+
+#container {
+  min-height: 100vh;
+}
+
+.inner {
+  position: relative;
+  width: 100%;
+  max-width: 1340px;
+  margin: 0 auto;
+  padding: 0 30px;
+}
+
+.sec-g {
+  padding: 10vw 0;
+}
+.sec-g__tit {
+  padding-bottom: 2.34375vw;
+  font-size: 4.8rem;
+}
+.sec-g__more {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  position: absolute;
+  top: 17px;
+  right: 30px;
+  font-size: 2rem;
+}
+.sec-g__more::after {
+  content: "\f061";
+  font-family: "Line Awesome Free";
+  font-weight: 900;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background: #e4e4e4;
+  border-radius: 50%;
+}
+
+#skip-nav,
+#header {
+  display: none;
+}
+
 :root {
   --swiper-theme-color: red;
 }
@@ -3504,7 +3554,7 @@ input[type=checkbox] {
 .swiper .swiper-slide img {
   display: block;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -3512,4 +3562,96 @@ input[type=checkbox] {
   display: block;
   width: 100%;
   height: 100%;
+}
+.swiper .swiper-button-next::after,
+.swiper .swiper-button-prev::after {
+  display: none;
+}
+.swiper .swiper-button-next::before,
+.swiper .swiper-button-prev::before {
+  font-family: "Line Awesome Free";
+  font-weight: 900;
+  font-size: 3rem;
+  color: #000;
+  opacity: 0.5;
+}
+.swiper .swiper-button-next::before {
+  content: "\f138";
+}
+.swiper .swiper-button-prev::before {
+  content: "\f137";
+}
+
+.slide-intro .swiper-slide {
+  position: relative;
+}
+.slide-intro .swiper-slide img {
+  -o-object-position: 50% 100%;
+     object-position: 50% 100%;
+}
+.slide-intro .swiper-slide .text-area {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 70%;
+  max-width: 400px;
+}
+.slide-intro .swiper-slide .text-area__tit {
+  font-size: 3rem;
+  color: #1d1d1d;
+}
+.slide-intro .swiper-slide .text-area__cont {
+  color: #555555;
+}
+.slide-intro .swiper-slide .text-area__goto {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 7px 20px;
+  background: #246beb;
+  color: #fff;
+}
+.slide-intro .swiper-slide img {
+  height: 50vh;
+}
+.slide-intro .swiper-pagination {
+  display: none;
+}
+
+@media screen and (min-width: 600px) {
+  .slide-intro .swiper-slide img {
+    height: 70vh;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .slide-intro .swiper-slide img {
+    height: 90vh;
+  }
+  .slide-intro .swiper-slide .text-area {
+    width: 100%;
+    max-width: none;
+    text-align: left;
+  }
+  .slide-intro .swiper-slide .text-area__tit {
+    font-size: 6rem;
+  }
+  .slide-intro .swiper-slide .text-area__cont {
+    font-size: 2rem;
+  }
+  .slide-intro .swiper-slide .text-area__goto {
+    margin-top: 30px;
+  }
+  .slide-intro .swiper-pagination {
+    display: block;
+  }
+  .slide-intro .swiper-button-next,
+  .slide-intro .swiper-button-prev {
+    display: none;
+  }
+}
+.slide-studio {
+  overflow: visible;
+}
+.slide-studio .swiper-pagination {
+  bottom: -50px;
 }/*# sourceMappingURL=styles.css.map */
