--- a/resources/scss/pattern/_p_content.scss
+++ b/resources/scss/pattern/_p_content.scss
@@ -1,23 +1,28 @@
 // 사이트 컨텐츠 내용
+#skip-nav,
+#header {
+  display: none;
+}
 
 :root {
   --swiper-theme-color: red;
 }
 
+// 전역 스타일
 .swiper {
   width: 100%;
   height: 100%;
   .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: #fff;
+    background: $white;
     display: flex;
     justify-content: center;
     align-items: center;
     img {
       display: block;
       width: 100%;
-      height: 100vh;
+      height: 100%;
       object-fit: cover;
     }
     a {
@@ -25,5 +30,103 @@
       width: 100%;
       height: 100%;
     }
+  }
+  .swiper-button-next::after,
+  .swiper-button-prev::after {
+    display: none;
+  }
+  .swiper-button-next::before,
+  .swiper-button-prev::before {
+    font-family: "Line Awesome Free";
+    font-weight: 900;
+    font-size: 3rem;
+    color: $black;
+    opacity: 0.5;
+  }
+  .swiper-button-next::before {
+    content: "\f138";
+  }
+  .swiper-button-prev::before {
+    content: "\f137";
+  }
+}
+
+.slide-intro {
+  .swiper-slide {
+    position: relative;
+    img {
+      object-position: 50% 100%;
+    }
+    .text-area {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 70%;
+      max-width: 400px;
+      // .text-area__tit
+      &__tit {
+        font-size: 3rem;
+        color: $gray-90;
+      }
+      &__cont {
+        color: $gray-70;
+      }
+      &__goto {
+        display: inline-block;
+        margin-top: 20px;
+        padding: 7px 20px;
+        background: $primary;
+        color: $white;
+      }
+    }
+    img {
+      height: 50vh;
+    }
+  }
+  .swiper-pagination {
+    display: none;
+  }
+}
+
+// tablet
+@media screen and (min-width: 600px) {
+  .slide-intro .swiper-slide img {
+    height: 70vh;
+  }
+}
+
+// desktop
+@media screen and (min-width: 1024px) {
+  .slide-intro .swiper-slide img {
+    height: 90vh;
+  }
+  .slide-intro .swiper-slide .text-area {
+    width: 100%;
+    max-width: none;
+    text-align: left;
+  }
+  .slide-intro .swiper-slide .text-area__tit {
+    font-size: 6rem;
+  }
+  .slide-intro .swiper-slide .text-area__cont {
+    font-size: 2rem;
+  }
+  .slide-intro .swiper-slide .text-area__goto {
+    margin-top: 30px;
+  }
+  .slide-intro .swiper-pagination {
+    display: block;
+  }
+  .slide-intro .swiper-button-next,
+  .slide-intro .swiper-button-prev {
+    display: none;
+  }
+}
+
+.slide-studio {
+  overflow: visible;
+  .swiper-pagination {
+    bottom: -50px;
   }
 }
