--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -367,28 +367,6 @@
   background-color: #1d1d1d;
 }
 
-/** fonts setting **/
-/* default - Regular */
-@font-face {
-  font-family: "Pretendard GOV";
-  font-weight: 400;
-  font-style: normal;
-  src: url("../../fonts/PretendardGOV-Regular.subset.woff") format("woff");
-}
-/* Medium */
-@font-face {
-  font-family: "Pretendard GOV";
-  font-weight: 500;
-  font-style: normal;
-  src: url("../../fonts/PretendardGOV-Medium.subset.woff") format("woff");
-}
-/* Bold */
-@font-face {
-  font-family: "Pretendard GOV";
-  font-weight: 700;
-  font-style: normal;
-  src: url("../../fonts/PretendardGOV-Bold.subset.woff") format("woff");
-}
 /* **** area mixin ****/
 /* **** text attr ****/
 /* **** scroll ****/
@@ -3489,16 +3467,58 @@ input[type=checkbox] {
   background-color: #f8f8f8;
 }
 
-#container {
-  min-height: 100vh;
-}
-
 .inner {
   position: relative;
   width: 100%;
   max-width: 1340px;
   margin: 0 auto;
-  padding: 0 30px;
+  padding: 0 20px;
+}
+@media (min-width: 600px) and (max-width: 1023px) {
+  .inner {
+    padding: 0 30px;
+  }
+}
+
+#skip-nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10000;
+  width: 100%;
+  text-align: center;
+  background-color: #1d1d1d;
+}
+#skip-nav a:not(:focus) {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  padding: 0 !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  clip: rect(0, 0, 0, 0) !important;
+  white-space: nowrap !important;
+  border: 0 !important;
+}
+#skip-nav a:focus {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  outline-offset: -0.4rem;
+  outline: 2px solid #246beb;
+  font-size: 1.5rem;
+  color: #fff;
+  width: 100%;
+  height: 3.2rem;
+  margin: 0 auto;
+  text-align: center;
+}
+#skip-nav.type1 {
+  background-color: var(--krds-white);
+}
+#skip-nav.type1 a:focus {
+  color: var(--krds-gray-90);
 }
 
 .sec-g {
@@ -3514,8 +3534,13 @@ input[type=checkbox] {
   gap: 10px;
   position: absolute;
   top: 17px;
-  right: 30px;
+  right: 20px;
   font-size: 2rem;
+}
+@media (min-width: 600px) {
+  .sec-g__more {
+    right: 30px;
+  }
 }
 .sec-g__more::after {
   content: "\f061";
@@ -3530,9 +3555,227 @@ input[type=checkbox] {
   border-radius: 50%;
 }
 
-#skip-nav,
 #header {
+  position: relative;
+  z-index: 1000;
+}
+#header.active::before {
+  display: block;
+}
+#header.active .gnb__depth2 {
+  display: block;
+}
+#header::before {
+  content: "";
   display: none;
+  position: absolute;
+  top: 102px;
+  left: 0;
+  right: 0;
+  height: 218px;
+  background: #f8f8f8;
+}
+#header .inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 73px;
+}
+@media (min-width: 1024px) {
+  #header .inner {
+    height: auto;
+  }
+}
+#header #logo {
+  transform: scale(0.8);
+  transform-origin: 0 50%;
+}
+@media (min-width: 1024px) {
+  #header #logo {
+    transform: none;
+  }
+}
+#header #logo a {
+  display: block;
+  width: 200px;
+  height: 35px;
+  background: url("../../../resources/images/pattern/common/head_logo.png") no-repeat 0 0/contain;
+}
+#header #logo span {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  padding: 0 !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  clip: rect(0, 0, 0, 0) !important;
+  white-space: nowrap !important;
+  border: 0 !important;
+}
+
+#gnb {
+  display: none;
+  position: relative;
+}
+@media (min-width: 1024px) {
+  #gnb {
+    display: block;
+  }
+}
+#gnb .gnb__depth1 {
+  display: flex;
+}
+#gnb .gnb__depth1 > li {
+  position: relative;
+}
+#gnb .gnb__depth1 > li:hover > a > span {
+  color: #246beb;
+}
+#gnb .gnb__depth1 > li:hover > a > span::after {
+  width: 100%;
+}
+#gnb .gnb__depth1 > li:first-child .gnb__depth2::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1px;
+  height: 100%;
+  background: #e4e4e4;
+}
+#gnb .gnb__depth1 > li > a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 102px;
+  padding: 0 50px;
+  font-size: 2rem;
+  font-weight: 700;
+}
+#gnb .gnb__depth1 > li > a span {
+  position: relative;
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+#gnb .gnb__depth1 > li > a span::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 0;
+  height: 2px;
+  background: #246beb;
+  transition: all 0.3s;
+}
+#gnb .gnb__depth2 {
+  display: none;
+  position: absolute;
+  top: 102px;
+  left: 0;
+  right: 0;
+  padding: 30px 0;
+  background: #f8f8f8;
+}
+#gnb .gnb__depth2::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 1px;
+  height: 100%;
+  background: #e4e4e4;
+}
+#gnb .gnb__depth2 a {
+  display: block;
+  padding: 7px 0;
+  text-align: center;
+  color: #555555;
+}
+#gnb .gnb__depth2 a:hover {
+  font-weight: 700;
+  color: #1d1d1d;
+}
+
+.util {
+  display: flex;
+  gap: 15px;
+}
+.util .lang {
+  display: none;
+  position: relative;
+}
+@media (min-width: 1024px) {
+  .util .lang {
+    display: block;
+  }
+}
+.util .lang.active .lang__btn::after {
+  content: "\f106";
+  font-family: "Line Awesome Free";
+  font-weight: 900;
+}
+.util .lang.active .lang__lst {
+  display: block;
+}
+.util .lang__btn {
+  height: 57px;
+  margin-right: 10px;
+  font-size: 2rem;
+  text-transform: uppercase;
+}
+.util .lang__btn::after {
+  content: "\f107";
+  font-family: "Line Awesome Free";
+  font-weight: 900;
+  margin-left: 5px;
+  color: #8e8e8e;
+}
+.util .lang__lst {
+  display: none;
+  position: absolute;
+  top: 52px;
+  left: 0;
+  width: 90%;
+  border: 1px solid #c6c6c6;
+  background: #fff;
+  text-align: center;
+}
+.util .lang__lst li {
+  padding: 5px 0;
+  text-transform: uppercase;
+}
+.util .lang__lst li:first-child {
+  border-bottom: 1px solid #c6c6c6;
+}
+.util .search {
+  transform: scaleX(-1);
+}
+.util .search::before {
+  content: "\f002";
+  font-family: "Line Awesome Free";
+  font-weight: 900;
+  font-size: 3.8rem;
+}
+.util .all-menu::before {
+  content: "\f0c9";
+  font-family: "Line Awesome Free";
+  font-weight: 900;
+  font-size: 3.8rem;
+}
+
+#nav-all {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  background: rgba(255, 255, 255, 0.9);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
 }
 
 :root {
@@ -3585,6 +3828,10 @@ input[type=checkbox] {
 .slide-intro .swiper-slide {
   position: relative;
 }
+.slide-intro .swiper-slide.swiper-slide-active .text-area {
+  opacity: 1;
+  transform: translate(-50%, -50%);
+}
 .slide-intro .swiper-slide img {
   -o-object-position: 50% 100%;
      object-position: 50% 100%;
@@ -3593,9 +3840,11 @@ input[type=checkbox] {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0);
   width: 70%;
   max-width: 400px;
+  opacity: 0;
+  transition: all 0.5s;
 }
 .slide-intro .swiper-slide .text-area__tit {
   font-size: 3rem;
@@ -3651,6 +3900,19 @@ input[type=checkbox] {
 }
 .slide-studio {
   overflow: visible;
+  width: 80%;
+  margin-left: 0;
+}
+@media (min-width: 600px) {
+  .slide-studio {
+    width: 90%;
+  }
+}
+@media (min-width: 1024px) {
+  .slide-studio {
+    width: 100%;
+    margin-left: auto;
+  }
 }
 .slide-studio .swiper-pagination {
   bottom: -50px;
