--- a/resources/scss/component/_variables.scss
+++ b/resources/scss/component/_variables.scss
@@ -128,6 +128,10 @@ $breakpoints: (
   "lg": $breakpoint-lg,
 ) !default;
 
+$grid: 1340px !default;
+$p-tablet: 30px !default;
+$p-mobile: 20px !default;
+
 //spacers
 $spacers: (
   "0": "0",
@@ -224,6 +228,12 @@ $font-size-label-sm: 1.5rem !default;
 $font-size-label-md: 1.7rem !default;
 $font-size-label-lg: 1.9rem !default;
 
+//font weight
+$font-light: 300 !default;
+$font-normal: 400 !default;
+$font-medium: 500 !default;
+$font-bold: 700 !default;
+$font-bolder: 800 !default;
 $fws: (
   "light": 300,
   "normal": 400,
